# stdbm

./: .gitignore  Cargo.toml  README.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yml
assets/: sentences.csv  sentences_tags.csv  tags.csv
config/: default.toml
src/: data_structures.rs  db_operations.rs  settings.rs  stdbm.rs  stdbm_bckp.rs
