[package]
name = "stdbm"
description = "STDBM - Sentences-Tags DataBase Manager: simple manager for databases with sentences-tags relationship written in Rust"
version = "0.0.1"
edition = "2021"
readme = "README.md"
license = "Apache-2.0"
authors = ["paulobarchi@gmail.com"]

[[bin]]
name = "stdbm"
path = "src/stdbm.rs"

[dependencies]
config = "0.13.1"
serde = { version = "1.0", features = ["derive"] }
clap = { version = "3.1.12", features = ["derive"] }
