[package]
name = "stdbm"
description = "stdbm - Sentences-Tags DataBase Manager: simple manager for databases with sentences-tags relationship written in Rust"
version = "0.0.3"
edition = "2021"
readme = "README.md"
license = "Apache-2.0"
authors = ["paulobarchi@gmail.com"]

[[bin]]
name = "stdbm"
path = "src/stdbm.rs"

[dependencies]
config = "0.13.1"
serde = { version = "1.0", features = ["derive"] }
clap = { version = "3.1.12", features = ["derive"] }
csv = "1.0.0-beta.3"
